--- a/public/stylesheets/onboard.css
+++ b/public/stylesheets/onboard.css
@@ -293,6 +293,14 @@ label[for="link-input"] {
   cursor: move;
 }
 
+#link-cloud .cloud-element span {
+  max-width: 220px;
+  height: 1em;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
 #type-selector {
   margin: 0;
   padding: 0 30px;
